--- a/userhelp-public.css
+++ b/userhelp-public.css
@@ -141,7 +141,7 @@
 }
 
 
-#loading-overlay {
+#UH-loading-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -154,11 +154,11 @@
   z-index: 9999;
 }
 
-.overlay-content {
+.UH-overlay-content {
   text-align: center;
 }
 
-.spinner {
+.UH-spinner {
   border: 4px solid #f3f3f3;
   border-top: 4px solid #3498db;
   border-radius: 50%;
