--- a/userhelp-public.css
+++ b/userhelp-public.css
@@ -164,10 +164,10 @@
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  animation: spin 1s linear infinite;
+  animation: UH-spin 1s linear infinite;
 }
 
-@keyframes spin {
+@keyframes UH-spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
